unpackaged/main/default/objects/ServiceAppointment/fields/Service_Type_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Picklist__c</fullName>
    <label>Service Type Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rogers Fixed Wireless - Install</fullName>
            </value>
            <value>
                <fullName>Rogers WIFI - Install MACD</fullName>
            </value>
            <value>
                <fullName>Shaw WIFI - Install</fullName>
            </value>
            <value>
                <fullName>Telus SMB Install</fullName>
            </value>
            <value>
                <fullName>Typical - Bus Install CAN</fullName>
            </value>
            <value>
                <fullName>Non-Billable Customer Admin US</fullName>
            </value>
            <value>
                <fullName>Masergy - Install</fullName>
            </value>
            <value>
                <fullName>Spectrum - Install</fullName>
            </value>
            <value>
                <fullName>Typical - Bus Install US</fullName>
            </value>
            <value>
                <fullName>XO Out of Market - Install</fullName>
            </value>
            <value>
                <fullName>Masergy - Repair</fullName>
            </value>
            <value>
                <fullName>Typical - Bus Repair US</fullName>
            </value>
            <value>
                <fullName>XO Out of Market - Repair</fullName>
            </value>
            <value>
                <fullName>Rogers - Drops</fullName>
            </value>
            <value>
                <fullName>Typical - EF&amp;I Installation</fullName>
            </value>
            <value>
                <fullName>Business Aerial or Conduit BC</fullName>
            </value>
            <value>
                <fullName>Business Buried BC</fullName>
            </value>
            <value>
                <fullName>Residential Aerial or Conduit BC</fullName>
            </value>
            <value>
                <fullName>Residential Buried BC</fullName>
            </value>
            <value>
                <fullName>FIN Drops</fullName>
            </value>
            <value>
                <fullName>Admin Contractor CAN</fullName>
            </value>
            <value>
                <fullName>Typical - Escort CAN</fullName>
            </value>
            <value>
                <fullName>Typical - ISP CAN</fullName>
            </value>
            <value>
                <fullName>CN Rail - Locates CAN</fullName>
            </value>
            <value>
                <fullName>Hibernia Offrail - Locates CAN</fullName>
            </value>
            <value>
                <fullName>Rogers Off Rail - Locates CAN</fullName>
            </value>
            <value>
                <fullName>Telus - Locates CAN</fullName>
            </value>
            <value>
                <fullName>Typical - Locates CAN</fullName>
            </value>
            <value>
                <fullName>Zayo - Locates CAN</fullName>
            </value>
            <value>
                <fullName>Typical - OSP CAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>