unpackaged/main/default/objects/ServiceAppointment/fields/SLA_Name__c.field-meta.xml
<CustomField>
    <fullName>SLA_Name__c</fullName>
    <formula>Work_Order__r.SLA__r.SLA__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Name</label>
    <type>Text</type>
</CustomField>