unpackaged/main/default/objects/ServiceAppointment/fields/Sub_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Customer_Name__c</fullName>
    <formula>Sub_Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Customer Name</label>
    <type>Text</type>
</CustomField>