unpackaged/main/default/objects/ServiceAppointment/fields/Test_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Test_Date_and_Time__c</fullName>
    <label>Test Date and Time</label>
    <type>DateTime</type>
</CustomField>