unpackaged/main/default/objects/ServiceAppointment/fields/Ticket_History_Updated__c.field-meta.xml
<CustomField>
    <fullName>Ticket_History_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field to be updated if Ticket History Field and Files have been updated via flow.</description>
    <label>Ticket History Updated</label>
    <type>Checkbox</type>
</CustomField>