unpackaged/main/default/objects/ServiceAppointment/fields/Time_Change_Flag__c.field-meta.xml
<CustomField>
    <fullName>Time_Change_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Change Flag</label>
    <type>Checkbox</type>
</CustomField>