unpackaged/main/default/objects/ServiceAppointment/fields/TotalWorkHours__c.field-meta.xml
<CustomField>
    <fullName>TotalWorkHours__c</fullName>
    <description>Show total completion hours</description>
    <formula>(
IF( ISBLANK( Completion_Code_1__c ) , 0, (TIMEVALUE(Completion_Code_1_Finish__c ) - TIMEVALUE(Completion_Code_1_Start__c )))  +
IF( ISBLANK( Completion_Code_2__c ) , 0, (TIMEVALUE(Completion_Code_2_Finish__c ) - TIMEVALUE(Completion_Code_2_Start__c ))) +
IF( ISBLANK( Completion_Code_3__c ) , 0, (TIMEVALUE(Completion_Code_3_Finish__c ) - TIMEVALUE(Completion_Code_3_Start__c ))) +
IF( ISBLANK( Completion_Code_4__c ) , 0, (TIMEVALUE(Completion_Code_4_Finish__c ) - TIMEVALUE(Completion_Code_4_Start__c ))) +
IF( ISBLANK( Completion_Code_5__c ) , 0, (TIMEVALUE(Completion_Code_5_Finish__c ) - TIMEVALUE(Completion_Code_5_Start__c ))) +
IF( ISBLANK( Completion_Code_6__c ) , 0, (TIMEVALUE(Completion_Code_6_Finish__c ) - TIMEVALUE(Completion_Code_6_Start__c ))) +
IF( ISBLANK( Completion_Code_7__c ) , 0, (TIMEVALUE(Completion_Code_7_Finish__c ) - TIMEVALUE(Completion_Code_7_Start__c ))) +
IF( ISBLANK( Completion_Code_8__c ) , 0, (TIMEVALUE(Completion_Code_8_Finish__c ) - TIMEVALUE(Completion_Code_8_Start__c ))) +
IF( ISBLANK( Completion_Code_9__c ) , 0, (TIMEVALUE(Completion_Code_9_Finish__c ) - TIMEVALUE(Completion_Code_9_Start__c ))) +
IF( ISBLANK( Completion_Code_10__c ) , 0, (TIMEVALUE(Completion_Code_10_Finish__c ) - TIMEVALUE(Completion_Code_10_Start__c ))) +
IF( ISBLANK( Completion_Code_11__c ) , 0, (TIMEVALUE(Completion_Code_11_Finish__c ) - TIMEVALUE(Completion_Code_11_Start__c ))) +
IF( ISBLANK( Completion_Code_12__c ) , 0, (TIMEVALUE(Completion_Code_12_Finish__c ) - TIMEVALUE(Completion_Code_12_Start__c ))) +
IF( ISBLANK( Completion_Code_13__c ) , 0, (TIMEVALUE(Completion_Code_13_Finish__c ) - TIMEVALUE(Completion_Code_13_Start__c ))) +
IF( ISBLANK( Completion_Code_14__c ) , 0, (TIMEVALUE(Completion_Code_14_Finish__c ) - TIMEVALUE(Completion_Code_14_Start__c ))) +
IF( ISBLANK( Completion_Code_15__c ) , 0, (TIMEVALUE(Completion_Code_15_Finish__c ) - TIMEVALUE(Completion_Code_15_Start__c ))) +
IF( ISBLANK( Incompletion_Code_1__c   ) , 0, (TIMEVALUE( Incompletion_Code_1_Finish__c  ) - TIMEVALUE( Incompletion_Code_1_Start__c  ))) +
IF( ISBLANK( Incompletion_Code_2__c   ) , 0, (TIMEVALUE( Incompletion_Code_2_Finish__c  ) - TIMEVALUE( Incompletion_Code_2_Start__c  ))) +
IF( ISBLANK( Incompletion_Code_3__c   ) , 0, (TIMEVALUE( Incompletion_Code_3_Finish__c  ) - TIMEVALUE( Incompletion_Code_3_Start__c  ))) +
IF( ISBLANK( Incompletion_Code_4__c   ) , 0, (TIMEVALUE( Incompletion_Code_4_Finish__c  ) - TIMEVALUE( Incompletion_Code_4_Start__c  ))) 
)
/60000/60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Work Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>