unpackaged/main/default/objects/ServiceAppointment/fields/Type_of_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Appointment__c</fullName>
    <label>Type of Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MTTR</fullName>
            </value>
            <value>
                <fullName>Arrival Window</fullName>
            </value>
            <value>
                <fullName>Hard Start</fullName>
            </value>
            <value>
                <fullName>All Day</fullName>
            </value>
            <value>
                <fullName>PMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>