unpackaged/main/default/objects/ServiceAppointment/fields/TZAE__c.field-meta.xml
<CustomField>
    <fullName>TZAE__c</fullName>
    <description>Formula to convert arrival end to service territory time zone</description>
    <formula>TEXT(CASE(TEXT(ServiceTerritory.OperatingHours.TimeZone),
&#39;America/St_Johns&#39;,ArrivalWindowEndTime+(-210/1440),
&#39;America/Halifax&#39;,ArrivalWindowEndTime+(-240/1440),
&#39;America/New_York&#39;,ArrivalWindowEndTime+(-300/1440),
&#39;America/Chicago&#39;,ArrivalWindowEndTime+(-360/1440),
&#39;America/El_Salvador&#39;,ArrivalWindowEndTime+(-360/1440),
&#39;America/Denver&#39;,ArrivalWindowEndTime+(-420/1440),
&#39;America/Regina&#39;,ArrivalWindowEndTime+(-360/1440),
&#39;America/Phoenix&#39;,ArrivalWindowEndTime+(-420/1440),
&#39;America/Los_Angeles&#39;,ArrivalWindowEndTime+(-480/1440),
&#39;America/Anchorage&#39;,ArrivalWindowEndTime+(-540 /1440),
&#39;Pacific/Honolulu&#39;,ArrivalWindowEndTime+(-600/1440),
null
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TZAE</label>
    <type>Text</type>
</CustomField>