unpackaged/main/default/objects/ServiceAppointment/fields/TZAS__c.field-meta.xml
<CustomField>
    <fullName>TZAS__c</fullName>
    <description>Formula to convert arrival start to service territory time zone</description>
    <formula>TEXT(CASE(TEXT(ServiceTerritory.OperatingHours.TimeZone),
&#39;America/St_Johns&#39;,ArrivalWindowStartTime+(-210/1440),
&#39;America/Halifax&#39;,ArrivalWindowStartTime+(-240/1440),
&#39;America/New_York&#39;,ArrivalWindowStartTime+(-300/1440),
&#39;America/Chicago&#39;,ArrivalWindowStartTime+(-360/1440),
&#39;America/El_Salvador&#39;,ArrivalWindowStartTime+(-360/1440),
&#39;America/Denver&#39;,ArrivalWindowStartTime+(-420/1440),
&#39;America/Regina&#39;,ArrivalWindowStartTime+(-360/1440),
&#39;America/Phoenix&#39;,ArrivalWindowStartTime+(-420/1440),
&#39;America/Los_Angeles&#39;,ArrivalWindowStartTime+(-480/1440),
&#39;America/Anchorage&#39;,ArrivalWindowStartTime+(-540 /1440),
&#39;Pacific/Honolulu&#39;,ArrivalWindowStartTime+(-600/1440),
null
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TZAS</label>
    <type>Text</type>
</CustomField>