unpackaged/main/default/objects/ServiceAppointment/fields/TZSE__c.field-meta.xml
<CustomField>
    <fullName>TZSE__c</fullName>
    <description>Formula to convert schedule end to service territory time zone</description>
    <formula>TEXT(CASE(TEXT(ServiceTerritory.OperatingHours.TimeZone),
&#39;America/St_Johns&#39;,SchedEndTime+(-210/1440),
&#39;America/Halifax&#39;,SchedEndTime+(-240/1440),
&#39;America/New_York&#39;,SchedEndTime+(-300/1440),
&#39;America/Chicago&#39;,SchedEndTime+(-360/1440),
&#39;America/El_Salvador&#39;,SchedEndTime+(-360/1440),
&#39;America/Denver&#39;,SchedEndTime+(-420/1440),
&#39;America/Regina&#39;,SchedEndTime+(-360/1440),
&#39;America/Phoenix&#39;,SchedEndTime+(-420/1440),
&#39;America/Los_Angeles&#39;,SchedEndTime+(-480/1440),
&#39;America/Anchorage&#39;,SchedEndTime+(-540 /1440),
&#39;Pacific/Honolulu&#39;,SchedEndTime+(-600/1440),
null
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TZSE</label>
    <type>Text</type>
</CustomField>