unpackaged/main/default/objects/ServiceAppointment/fields/TZSS__c.field-meta.xml
<CustomField>
    <fullName>TZSS__c</fullName>
    <description>Formula to convert sched start to service territory time zone</description>
    <formula>TEXT(CASE(TEXT(ServiceTerritory.OperatingHours.TimeZone),
&#39;America/St_Johns&#39;,SchedStartTime+(-210/1440),
&#39;America/Halifax&#39;,SchedStartTime+(-240/1440),
&#39;America/New_York&#39;,SchedStartTime+(-300/1440),
&#39;America/Chicago&#39;,SchedStartTime+(-360/1440),
&#39;America/El_Salvador&#39;,SchedStartTime+(-360/1440),
&#39;America/Denver&#39;,SchedStartTime+(-420/1440),
&#39;America/Regina&#39;,SchedStartTime+(-360/1440),
&#39;America/Phoenix&#39;,SchedStartTime+(-420/1440),
&#39;America/Los_Angeles&#39;,SchedStartTime+(-480/1440),
&#39;America/Anchorage&#39;,SchedStartTime+(-540 /1440),
&#39;Pacific/Honolulu&#39;,SchedStartTime+(-600/1440),
null
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TZSS</label>
    <type>Text</type>
</CustomField>