unpackaged/main/default/objects/ServiceAppointment/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>