unpackaged/main/default/objects/ServiceAppointment/validationRules/CC10_Start_Before_Finish.validationRule-meta.xml
<ValidationRule>
    <fullName>CC10_Start_Before_Finish</fullName>
    <active>true</active>
    <errorConditionFormula>Completion_Code_10_Start__c &gt; Completion_Code_10_Finish__c
||
Completion_Code_10_Finish__c - Completion_Code_10_Start__c &gt; 1</errorConditionFormula>
    <errorDisplayField>Completion_Code_10_Start__c</errorDisplayField>
    <errorMessage>Start Date must be set earlier than End Date and Duration no longer than 24 hours.</errorMessage>
</ValidationRule>