unpackaged/main/default/objects/ServiceAppointment/validationRules/CC12_Partially_Inserted.validationRule-meta.xml
<ValidationRule>
    <fullName>CC12_Partially_Inserted</fullName>
    <active>true</active>
    <errorConditionFormula>NOT((ISBLANK(Completion_Code_12__c)==true&amp;&amp;ISBLANK( Completion_Code_12_Quantity__c)==true&amp;&amp;ISBLANK( Completion_Code_12_Start__c)==true)||(ISBLANK(Completion_Code_12__c)==false&amp;&amp;ISBLANK( Completion_Code_12_Quantity__c)==false&amp;&amp;ISBLANK( Completion_Code_12_Start__c)==false))</errorConditionFormula>
    <errorDisplayField>Completion_Code_12__c</errorDisplayField>
    <errorMessage>Quantity, Start Date and End Date must be all filled for an inserted Code.</errorMessage>
</ValidationRule>