unpackaged/main/default/objects/ServiceAppointment/validationRules/CC6_Partially_Inserted.validationRule-meta.xml
<ValidationRule>
    <fullName>CC6_Partially_Inserted</fullName>
    <active>true</active>
    <errorConditionFormula>NOT((ISBLANK(Completion_Code_6__c)==true&amp;&amp;ISBLANK( Completion_Code_6_Quantity__c)==true&amp;&amp;ISBLANK( Completion_Code_6_Start__c)==true)||(ISBLANK(Completion_Code_6__c)==false&amp;&amp;ISBLANK( Completion_Code_6_Quantity__c)==false&amp;&amp;ISBLANK( Completion_Code_6_Start__c)==false))</errorConditionFormula>
    <errorDisplayField>Completion_Code_6__c</errorDisplayField>
    <errorMessage>Quantity, Start Date and End Date must be all filled for an inserted Code.</errorMessage>
</ValidationRule>